[package]
name = "comport"
version = "0.0.9"
authors = ["Thomas Chiantia <thomas.chiantia@gmail.com>"]
keywords = ["Windows","Async", "Serialport"]
description = "Windows first async serial port"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3"
bytes = "1"
pin-project-lite = "0.2"
crossbeam = "0.8"
parking_lot = "0.12"
regex = "1"

# other
bitflags = "2.4"
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "1"

# log
tracing = "0.1"

# Windows dependencies
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_Security",
	"Win32_Storage_FileSystem",
	"Win32_System_SystemInformation",
	"Win32_System_IO",
	"Win32_System_Kernel",
	"Win32_System_LibraryLoader",
	"Win32_System_Pipes",
	"Win32_System_Power",
	"Win32_System_Registry",
	"Win32_System_Rpc",
	"Win32_System_Services",
	"Win32_System_SystemServices",
	"Win32_System_Threading",
	"Win32_System_RemoteDesktop",
	"Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
mockall = "0.12"
trybuild = "1"
tracing-subscriber = "0.3"
tokio = { version = "1.32", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

[features]
default = []
serde = ["dep:serde"]
node = ["dep:serde_json"]

[[example]]
name = "scan"

[[example]]
name = "track"
